--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@ i have so much thing to do, like pluging my knime to the mongodb database, or fi
 </body> 
 </html>
 <a href= »http://google.com » </a>
-<img src= »images/image1.png » alt= »Image de petit chaton mignon »>
+<img src= "image/bb.jpg" alt= "Image de petit chaton mignon ">
